--- a/static/index.css
+++ b/static/index.css
@@ -9,7 +9,8 @@
 }
 
 .input-card {
-    margin-top: 7.0em;
+    position: relative;
+    top: 7.0em;
 }
 
 .card-header {
@@ -28,7 +29,8 @@ form button {
 }
 
 .alert {
-    margin-top: 5em;
+    position: relative;
+    top: 5em;
 }
 
 .alert-heading {
@@ -87,8 +89,4 @@ form button {
 .qrcode img {
     width: 150px;
     height: 150px;
-}
-
-.container.main {
-    margin-bottom: 5em;
 }
